--- a/informe.tex
+++ b/informe.tex
@@ -147,4 +147,74 @@ por tanto se concluye que para \(\alpha < 2\) se converge.
 Utilizando el metodo de \emph{Leverberg-Marquardt}. Intente con distintos
 valores de \(\alpha, \lambda\). Pruebe ademas con los valores iniciales
 \((1.5, -2.5), (1.5, 2.5), (0,0), (1,1), (-3,-3)\). Compare los resultados.
+
+\section*{Pregunta 3}
+\noindent Minimice la funcion de \emph{Rosenbrock}
+\[ f(x,y) = 100 (y - x^2)^2 + (1 - x)^2 \]
+Utilizando los tres metodos vistos anteriormente y compare resultados
+\newline
+
+Los codigos estan en el archivo \texttt{pregunta\_3.m} con un ejemplo de
+los resultados en \texttt{respuesta\_3.txt}. Es claro que el punto
+minimizante de esta funcion corresponde a \((1,1)\), asi que tomamos un
+punto inicial \(x_0 = (2.5, 3.5)\) no tan lejos de este.
+
+\subsection*{Maximo descenso}
+Este corresponde a la primera seccion en el archivo
+\texttt{respuesta\_3.txt}. Para utilizar este necesitamos el gradiente de
+la funcion
+\[ \nabla f (x,y) = [-400 x (y - x^2) - 2 (1-x),\ 200 (y-x^2)] \]
+Con esto, los resultados son todos de la forma
+\begin{verbatim}
+ans = x1 = (Inf, Inf), alpha = X , iter = 7, valor = NaN
+\end{verbatim}
+con \(X \in [0.1 \dots 1]\). Para cada uno de estos valores este
+metodo no converge. La presencia de NaN como valor y dado que la forma de
+la funcion es una parabola nos da a intuir que este metodo llega a algun
+valor infinito el cual no le permite superar la septima iteracion.
+
+\subsection*{Metodo de Newton}
+Corresponde a la segunda seccion del archivo. Necesitamos el Hessiano de
+la funcion
+\[ H (x,y) =
+  \begin{pmatrix}
+    -400 y - 1200 x^2 + 2 & -400 x \\
+    -400 x & 200
+  \end{pmatrix}
+\]
+Solo para algunos valores de \(\alpha\) en \([0.4 ,\ 0.5]\) este metodo
+converge
+\begin{verbatim}
+ans = x1 = (-7.57, 57.26), alpha = 0.40, iter = 10000, valor = 74.40
+ans = x1 = (0.96, 0.91), alpha = 0.41, iter = 10000, valor = 0.01
+ans = x1 = (1.00, 1.00), alpha = 0.42, iter = 10000, valor = 0.00
+ans = x1 = (1.07, 1.14), alpha = 0.43, iter = 10000, valor = 0.00
+ans = x1 = (13.09, 171.12), alpha = 0.44, iter = 10000, valor = 147.56
+ans = x1 = (-24.40, 595.08), alpha = 0.46, iter = 10000, valor = 649.03
+ans = x1 = (1.26, 1.58), alpha = 0.47, iter = 10000, valor = 0.09
+ans = x1 = (1.00, 1.00), alpha = 0.48, iter = 10000, valor = 0.00
+ans = x1 = (-1.11, 0.72), alpha = 0.49, iter = 10000, valor = 31.37
+ans = x1 = (4.69, 21.90), alpha = 0.50, iter = 10000, valor = 13.97
+\end{verbatim}
+Fuera de este rango diverge. Notese que siempre llega al maximo de
+iteraciones, si subiera el limite de estas en todas excepto \(3\)
+llegarian a este. Podemos concluir que converge si y solo si se escogen
+valores correctos de \(\alpha\).
+
+\subsection*{Metodo de Levenberg}
+La ultima seccion del archivo. Este metodo para todos los valores de
+\(\alpha \in [0.1,\ 0.5]\) y \(\lambda \in [0.1,\ 0.5]\) probados
+converge al valor \((1,1)\) dicho anteriormente
+\begin{verbatim}
+ans = x1 = (1.00, 1.00), lambda = 0.20, alpha = 0.40, iter = 57, valor = 0.00
+ans = x1 = (1.00, 1.00), lambda = 0.27, alpha = 0.30, iter = 80, valor = 0.00
+ans = x1 = (1.00, 1.00), lambda = 0.30, alpha = 0.50, iter = 50, valor = 0.00
+ans = x1 = (1.00, 1.00), lambda = 0.37, alpha = 0.30, iter = 88, valor = 0.00
+ans = x1 = (1.00, 1.00), lambda = 0.40, alpha = 0.43, iter = 63, valor = 0.00
+ans = x1 = (1.00, 1.00), lambda = 0.47, alpha = 0.33, iter = 87, valor = 0.00
+ans = x1 = (1.00, 1.00), lambda = 0.50, alpha = 0.43, iter = 69, valor = 0.00
+\end{verbatim}
+Algo interesante a considerar es la consistencia de la cantidad de
+iteraciones que le toma llegar al optimo. Podemos considerar que con
+mayor certeza este metodo para este problema converge.
 \end{document}
