cambios menores informe

--- a/informe.tex
+++ b/informe.tex
@@ -25,8 +25,8 @@ descenso y de Newton.
 
 Se analisaran individualmente cada una de las combinaciones. Para
 desarrollar estos se realizaron en \texttt{octave} en vez de
-\texttt{Matlab} por lo que pueden haber incompatibilidades que se me
-hayan pasado por alto.󠀿
+\texttt{Matlab} por lo que pueden haber incompatibilidades que hayan
+pasado por alto.󠀿
 
 \subsection*{Ejemplo 1 con maximo descenso}
 \noindent Nuestra funcion corresponde a
@@ -57,9 +57,9 @@ ans = alpha = 1.20, iteraciones =  2108, final = (-Inf, NaN)
 ans = ultimo caso hay divergencia. Convergencia si alpha < 1
 \end{verbatim}
 Vemos que a medida que el \(\alpha\) tiende a \(1\) le cantidad de
-iteraciones va llegando al limite y despues de este las soluciones se
-alejan del minimo \((0,0)\). Por tanto diremos que para \(\alpha < 1\)
-el algoritmo de maximo descendo converge.
+iteraciones va llegando al maximo predefinido de iteraciones, despues de
+este las soluciones se alejan del minimo \((0,0)\). Por tanto diremos que
+para \(\alpha < 1\) el algoritmo de maximo descendo converge.
 
 \subsection*{Ejemplo 1 con metodo de newton}
 \noindent Similarmente que en la seccion anterior dados los mismos
